# gemini-financial-researcher

./: README.md
financial_researcher/: pyproject.toml
financial_researcher/src/financial_researcher/: main.py
